changed port to 80, fixed font home, fixed delivery box align apparelProduct

--- a/public/styles/views/_apparelProduct.scss
+++ b/public/styles/views/_apparelProduct.scss
@@ -52,7 +52,7 @@
   }
 
   .plus-box {
-    width: 483px;
+    width: 486px;
     height: 33px;
     display: flex;
     flex-direction: row;
